tests/baselines/reference/parserErrantEqualsGreaterThanAfterFunction2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserErrantEqualsGreaterThanAfterFunction2.ts (4 errors) ====
    function f(p: A) => p;
                     ~~
!!! error TS1144: Block or ';' expected.
             ~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
                  ~
!!! error TS2304: Cannot find name 'A'.
                        ~
!!! error TS2304: Cannot find name 'p'.